2007-10-01  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-theme.[ch]:
	Delete leftover files

2007-09-28  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Update for new gio pkgconfig name

2007-09-28  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-properties-window.c:
	Update to the new name for g_format_file_size_for_display

2007-09-28  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-link.c:
        * src/file-manager/fm-icon-container.c:
        * src/nautilus-query-editor.c:
	Use gio mimetype functions instead of gnome-vfs ones.

2007-09-28  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-mime-actions.[ch]:
        * libnautilus-private/nautilus-program-choosing.[ch]:
        * libnautilus-private/nautilus-recent.[ch]:
	Use GAppInfo instead of GnomeVFSMimeApplication
	
        * src/file-manager/fm-directory-view.c:
        * src/nautilus-information-panel.c:
        * test/test-nautilus-mime-actions.c:
	Update due to the api changes in the GAppInfo move.

2007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-properties-window.c:
	Use g_file_size_format_for_display instead of
	gnome_vfs_format_file_size_for_display
	
2007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
	Remove unused GnomeVFSHandle stuff
	
2007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
	Forgot to change GnomeVFSResult to GError in
	one spot.

007-09-27  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
        Implement nautilus_file_set_owner and nautilus_file_set_group
	using set_attributes