@@ -40,6 +40,7 @@ enum {
 	EMBLEMS_CHANGED,
 	POPUP_MENU_CHANGED,
 	USER_DIRS_CHANGED,
+	MIME_DATA_CHANGED,
 	LAST_SIGNAL
 };
 
@@ -97,6 +98,14 @@ nautilus_signaller_class_init (NautilusSignallerClass *class)
 		              G_TYPE_NONE, 0);
 	signals[USER_DIRS_CHANGED] =
 		g_signal_new ("user_dirs_changed",
+		              G_TYPE_FROM_CLASS (class),
+		              G_SIGNAL_RUN_LAST,
+		              0,
+		              NULL, NULL,
+		              g_cclosure_marshal_VOID__VOID,
+		              G_TYPE_NONE, 0);
+	signals[MIME_DATA_CHANGED] =
+		g_signal_new ("mime_data_changed",
 		              G_TYPE_FROM_CLASS (class),
 		              G_SIGNAL_RUN_LAST,
 		              0,
